style: update introduction text in the about section for clarity and detail

--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
                 <div class="badge">International Tutor</div>
             </div>
 
-            <h1>Математика и Информатика.<br>Системный подход.</h1>
-            <p>Преподаватель высшей категории. Ex-CEO с опытом управления бизнесом. Готовлю победителей олимпиад и студентов ведущих вузов мира.</p>
+            <h1>Математика и Информатика. Системный подход.</h1>
+            <p>Преподаватель математики и информатики. Помогаю ученикам уверенно сдавть ОГЭ и ЕГЭ, достигать побед на олимпиадах и поступать в ведущие вузы мира.<br>Индивидуальный подход, проверенные методики, работа с реальными задачами делают путь к успеху понятным и достижимым.</p>
             <a href="#contacts" class="btn">Связаться со мной</a>
         </div>
     </section>
